--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "share-play",
+	"name": "teleparty-tonight",
 	"version": "1.0.0",
-	"description": "watching videos together",
+	"description": "telecommunal television party",
 	"main": "share-play.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +15,14 @@
 	"license": "MIT",
 	"module": "share-play.js",
 	"esm": true,
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"koa": "^2.11.0",
+		"koa-pino-logger": "^3.0.0",
+		"koa-static": "^5.0.0",
+		"timesync": "^1.0.5"
+	},
+	"devDependencies": {
+		"snowpack": "^1.7.1"
+	}
 }
