--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "teleparty-tonight.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "npm run build:compress; npm run build:rollup",
+		"build": "npm run build:rollup && npm run build:compress",
 		"build:compress": "./script/compress",
 		"build:rollup": "rollup -c .rollup.js"
 	},
