--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "teleparty-tonight",
 	"version": "1.0.0",
 	"description": "telecommunal television party",
-	"main": "teleparty-tonight.js",
+	"main": "server.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "npm run build:rollup && npm run build:compress",
