--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
 		"koa-easy-ws": "^1.1.3",
 		"koa-pino-logger": "^3.0.0",
 		"koa-static": "^5.0.0",
-		"timesync": "^1.0.5"
+		"timesync": "^1.0.8"
 	},
 	"devDependencies": {
-		"rollup": "^2.7.6",
-		"rollup-plugin-cjs-es": "^1.0.0"
+		"@rollup/plugin-node-resolve": "^11.2.1",
+		"brotli-cli": "^0.0.1",
+		"rollup": "^2.45.2",
+		"rollup-plugin-cjs-es": "^1.0.1"
 	}
 }
