--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"esm": true,
 	"type": "module",
 	"dependencies": {
+		"@github/catalyst": "^1.1.3",
 		"koa": "^2.11.0",
 		"koa-easy-ws": "^1.1.3",
 		"koa-pino-logger": "^3.0.0",
