--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"devDependencies": {
 		"@rollup/plugin-node-resolve": "^11.2.1",
 		"brotli-cli": "^0.0.1",
+		"nodemon": "^2.0.7",
 		"rollup": "^2.45.2",
 		"rollup-plugin-cjs-es": "^1.0.1"
 	}
